--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,15 @@ dependencies {
 
     // Retrofit
     def retrofit_version = "2.9.0"
-    implementation "com.squareup.retrofit2:retrofit: $retrofit_version"
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //OKHttp
+    //noinspection GradleDependency
+    def okhttp_version = '4.9.0'
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     def lifecycle_version = "2.4.0-alpha03"
     def arch_version = "2.1.0"
