--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,10 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-//    // LiveData
-//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-//    // Lifecycles only (without ViewModel or LiveData)
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+   // // LiveData
+    //implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // Lifecycles only (without ViewModel or LiveData)
+    //implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
